--- a/platformio.ini
+++ b/platformio.ini
@@ -12,5 +12,12 @@
 platform = espressif32
 board = esp32dev
 framework = arduino
-lib_deps =         miguelbalboa/MFRC522 @ ^1.4.11
+monitor_port = /dev/cu.usbserial-0001
+upload_port = /dev/cu.usbserial-0001
+build_unflags = -std=gnu++11
+build_flags = -std=gnu++17
+lib_deps = roboticsbrno/ServoESP32@^1.0.3
         amcewen/HttpClient@^2.2.0
+        robtillaart/DHT20@^0.3.1
+        miguelbalboa/MFRC522 @ ^1.4.11
+        bogde/HX711@^0.7.5
